# fruit_internship

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_pt_2_7  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yml
conf/: config.yaml
conf/model/: cond_detr_50.yaml  dab_detr_50.yaml  defor_detr.yaml  detr_101.yaml  detr_50.yaml  detr_50_dc5.yaml  detrv1_101.yaml  detrv1_18.yaml  detrv1_34.yaml  detrv1_50.yaml  detrv1_50_365.yaml  detrv2.yaml  detrv2_101.yaml  detrv2_18.yaml  detrv2_34.yaml  detrv2_50.yaml  dfine_large_coco.yaml  dfine_large_obj2coco.yaml  dfine_large_obj365.yaml  dfine_xlarge_coco.yaml  dfine_xlarge_obj2coco.yaml  dfine_xlarge_obj365.yaml  efficientnet_v2_s.yaml  rtdetrv1_101.yaml  rtdetrv1_101_365.yaml  rtdetrv1_18.yaml  rtdetrv1_34.yaml  rtdetrv1_50.yaml  rtdetrv1_50_365.yaml  rtdetrv2_101.yaml  rtdetrv2_18.yaml  rtdetrv2_34.yaml  rtdetrv2_50.yaml  tiny_vit.yaml  vit_base.yaml  yolos_base.yaml  yolos_small.yaml  yolos_tiny.yaml
data/Fruit_dataset/: data.yaml
docs/: conf.py  index.rst
docs/autoapi/: index.rst
docs/autoapi/fruit_project/: index.rst
docs/autoapi/fruit_project/main/: index.rst
docs/autoapi/fruit_project/models/: index.rst
docs/autoapi/fruit_project/models/model_factory/: index.rst
docs/autoapi/fruit_project/models/transforms_factory/: index.rst
docs/autoapi/fruit_project/utils/: index.rst
docs/autoapi/fruit_project/utils/datasets/: index.rst
docs/autoapi/fruit_project/utils/datasets/cls_dataset/: index.rst
docs/autoapi/fruit_project/utils/datasets/det_dataset/: index.rst
docs/autoapi/fruit_project/utils/early_stop/: index.rst
docs/autoapi/fruit_project/utils/general/: index.rst
docs/autoapi/fruit_project/utils/logging/: index.rst
docs/autoapi/fruit_project/utils/metrics/: index.rst
docs/autoapi/fruit_project/utils/trainer/: index.rst
docs/source/: fruit_project.models.rst  fruit_project.rst  fruit_project.utils.datasets.rst  fruit_project.utils.rst  modules.rst  src.models.rst  src.rst  src.utils.datasets.rst  src.utils.rst
src/: main.py  requirements.txt
src/fruit_project/: __init__.py  main.py
src/fruit_project/models/: model_factory.py  transforms_factory.py
src/fruit_project/utils/: __init__.py  data.py  early_stop.py  general.py  logging.py  metrics.py  trainer.py
src/fruit_project/utils/datasets/: alb_mosaic_dataset.py  cls_dataset.py  det_dataset.py  mosaic_dataset.py
src/models/: model_factory.py  transforms_factory.py
src/utils/: data.py  dataset.py  early_stop.py  general.py  logging.py  metrics.py  trainer.py
src/utils/datasets/: cls_dataset.py  det_dataset.py
