[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fruit-internship"
version = "0.0.1"
dependencies = [
    "albumentations==2.0.8",
    "hydra-core==1.3.2",
    "kaggle==1.7.4.5",
    "matplotlib==3.10.3",
    "omegaconf==2.3.0",
    "opencv_python_headless==4.11.0.86",
    "pandas==2.3.0",
    "torch==2.4.0",
    "torchvision==0.19.0",
    "transformers>=4.52.4",
    "numpy>=1.24,<2.0",
    "Pillow==11.2.1",
    "seaborn==0.13.2",
    "tqdm==4.66.5",
    "wandb",
    "torchmetrics[detection]",
    "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-autoapi",
    "furo",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fruit_project*"]

[tool.mypy]
ignore_missing_imports = true

# per-module behavior
[[tool.mypy.overrides]]
module = "torch.*"
follow_imports = "skip"
follow_imports_for_stubs = true

[[tool.mypy.overrides]]
module = "omegaconf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hydra.*"
ignore_missing_imports = true
